# friendly-id

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PERFORMANCE.md  README.md  benchmark.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  publish.yml  test.yml
friendly_id/: __init__.py  friendly_id.py  pydantic_types.py  sqlalchemy_types.py  test_friendly_id.py
tests/: test_friendly_id.py  test_pydantic.py  test_sqlalchemy.py
