
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "friendly-id"
version = "0.3.1"
description = "Read the latest Real Python tutorials"
readme = "README.md"
authors = [{ name = "Junlin Zhou", email = "jameszhou2108@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["uuid", "friendly-id"]
dependencies = []
requires-python = ">=3.5"

    [project.optional-dependencies]
    build = ["build", "twine"]
    dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

    [project.urls]
    homepage = "https://github.com/edwardzjl/friendly-id"
    repository = "https://github.com/edwardzjl/friendly-id"

[tool.bumpver]
current_version = "0.3.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

    [tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
        'version = "{version}"',
    ]
    "friendly_id/__init__.py" = ["{version}"]
    "README.md" = ["{version}"]
